<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_azul"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip" >
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon" >
                </ImageView>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="series"
                    android:textColor="@color/blanco"
                    android:textSize="35dip" >
                </TextView>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text=".ly"
                    android:textColor="@color/blanco"
                    android:textSize="20dip" >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/background_blanco_borde_gris"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textColor="@color/font" >
                    </TextView>
                    <EditText
                        android:id="@+id/user"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:inputType="text"
                        android:textSize="13dip" >
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip" >
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/pass"
                        android:textColor="@color/font" >
                    </TextView>
                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:inputType="textPassword"
                        android:textSize="13dip" >
                    </EditText>
                </LinearLayout>
                <Button
                    android:id="@+id/login"
                    style="@style/styleBotonAzul"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>